feat: fix judge and quiz issue